# spaceflight-dynamics-framework

./: CMakeLists.txt  README.md
backend/: CMakeLists.txt
backend/include/: Thrust.h  customSpacecraftStruct.h  environmentConfig.h  jsonConfigReader.h  physics.h  quaternion.h  simDataStruct.h  simcontrol.h  spacecraft.h  spacemath.h  stateVectorStruct.h  vector3.h
backend/include/Control/: inputArbiter.h
backend/include/Coordinates/: coordinateTransformer.h  missionContext.h  simulationFrameContext.h
backend/include/Integrators/: eulerIntegrator.h  iIntegrator.h
backend/include/Physics/: basicMoonGravityModel.h  iPhysicsModel.h  iRotationalPhysicsModel.h  rigidBodyRotationalModel.h
backend/include/Sensory_Perception/: iSensor.h  sensorModel.h
backend/include/Thrust/: BasicMainEngineModel.h  BasicRCSModel.h  EngineConfig.h  FuelStateStruct.h  FueltankStruct.h  ME_thrustState.h  RCSConfig.h  RCSControlAllocator.h  RCS_ThrustState.h  iThrust.h
backend/src/: Thrust.cpp  jsonConfigReader.cpp  main.cpp  physics.cpp  quaternion.cpp  simcontrol.cpp  spacecraft.cpp  spacemath.cpp
backend/src/Coordinates/: coordinateTransformer.cpp
backend/src/Integrators/: eulerIntegrator.cpp
backend/src/Physics/: basicMoonGravityModel.cpp
backend/src/Sensory_Perception/: sensorModel.cpp
backend/src/Thrust/: BasicMainEngineModel.cpp  BasicRCSModel.cpp
docs/: MCI_Frame.drawio  Windows_Installation_Instruction.md  contributing.md  installation_guideline_ubuntu.md
interface/: CMakeLists.txt  FlightCommandDTO.h  TelemetryDTO.h  TelemetryMapper.cpp  TelemetryMapper.h
ui/: CMakeLists.txt  TelemetryDTO.h  cockpitpage.cpp  cockpitpage.h  controlshelppage.cpp  controlshelppage.h  datastructs.h  flightcommandstruct.h  homepage.cpp  homepage.h  inputmapper.cpp  inputmapper.h  landingview.cpp  landingview.h  mainwindow.cpp  mainwindow.h  resources.qrc  settingspage.cpp  settingspage.h  simulationworker.cpp  simulationworker.h  topbarwidget.cpp  topbarwidget.h  uibuilder.cpp  uibuilder.h
ui/Resources/configs/: lander.json
